#6 - Info layer on map should be open by default - Info on images bug fix (was not showing any text and should be closed by default)

--- a/src/css/shared/elements/info/styles.less
+++ b/src/css/shared/elements/info/styles.less
@@ -125,6 +125,7 @@ info {
     .allMapLayers {
       max-height: 92%;
       overflow-y: auto;
+      width: 350px;
       .mapLayerWrapper {
         width: 320px;
         &:not(:last-child) {
